<resources>
    <string name="app_name" translatable="false">Dicoding Story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register_here">Don\'t have an account yet? register here</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="posting">Posting</string>
    <string name="description">Description</string>
    <string name="add_story">add story</string>
    <string name="accept_camera_permission">You must accept camera permission to continue this process.</string>
    <string name="loading">Loading…</string>
    <string name="back_button">Back button</string>
    <string name="story_photo">Story photo</string>
    <string name="close_button">Close button</string>
    <string name="shutter_button">Shutter button</string>
    <string name="reload">Reload</string>
    <string name="empty_story">Empty story…</string>
    <string name="validation_invalid_email">Email format is invalid</string>
    <string name="validation_password">Password must contain at least 6 characters</string>
    <string name="validation_empty">Field must be filled</string>
    <string name="validation_image_required">Image file required</string>
    <string name="new_story">New story</string>
    <string name="detail">Detail story</string>
    <string name="attention">Attention</string>
    <string name="sure_wanna_logout">Logout from App?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="home" translatable="false">Home</string>
    <string name="explore" translatable="false">Explore</string>
</resources>