<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_story_container"
    tools:context=".ui.addstory.AddStoryFragment">

    <Button
        android:id="@+id/btn_camera"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_camera"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/posting"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tf_layout_description" />

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/story_photo"
        app:layout_constraintDimensionRatio="4:4"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout" />

    <ImageView
        android:id="@+id/img_placeholder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_image_placeholder"
        app:layout_constraintTop_toTopOf="@id/img_preview"
        app:layout_constraintBottom_toBottomOf="@id/img_preview"
        app:layout_constraintStart_toStartOf="@id/img_preview"
        app:layout_constraintEnd_toEndOf="@id/img_preview"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/new_story" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_layout_description"
        style="@style/Custom.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>